a quick fix for a gap between the subnavbar and container

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,6 +146,12 @@ a.manage-profile-link:visited {
 }
 /* End of Header */
 
+.subnavbar { /* a quick fix to add some styles to the advanced search / login links */
+/*	background-color: #B9B9B8;*/
+	background-color: rgba(0, 0, 0, .15);
+	height: 3.75rem;
+	position: relative;
+}
 .below-nav-links {
 	margin-bottom: 0;
 	padding-bottom: 0;
@@ -154,6 +160,7 @@ a.manage-profile-link:visited {
 	float:right;
 	margin-top:.5em;
 	font-size: 90%;
+	font-weight: bold; /* a quick fix to add some styles to the advanced search / login links */
 }
 .below-nav-links a {
   color: #594036;
@@ -529,6 +536,8 @@ a.manage-profile-link:visited {
 	width: 100%;
 	margin-bottom: -70px;
 	padding: 0 0 6rem 0;
+	position: relative; /* a quick fix to add some styles to the advanced search / login links */
+	top: -16px; /* a quick fix to add some styles to the advanced search / login links */
 }
 .container .person-content {
 	display: flex;
@@ -1017,7 +1026,7 @@ td.citation-data.pub-item {
 
 /*** Specific Breakpoints ***/
 /* header */
-@media (max-width: 1245px) {
+@media (max-width: 1270px) {
 	#sticky-nav .navbar-btn {
 		display: none;
 	}
@@ -1108,8 +1117,11 @@ td.citation-data.pub-item {
 /* profile page */
 @media (max-width: 438px) {
 	.subnavbar {
-		min-height: 5rem;
+		min-height: 5.5rem;  /* a quick fix to add some styles to the advanced search / login links */
 		max-height: 15rem;
+	}
+	.container.profile {  /* a quick fix to add some styles to the advanced search / login links */
+		top: 0;
 	}
 }
 @media (max-width: 767px) {
@@ -1123,12 +1135,6 @@ td.citation-data.pub-item {
 		font-size: 2.4rem;
 		padding: 3rem 1.5rem;
 	}
-	/* org profile page */
-/*	.container.profile.org-profile .person-content .container {
-		width: 100%;
-		max-width: 100%;
-		padding: 0 7rem 4rem 7rem;
-	}*/
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 	.person-content .container {
